--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,10 +1,46 @@
 .App {
-  widtH: 100%;
+  width: 100%;
+  height: 100%;
   display: grid;
-  grid-template: 100% / 300px 1fr;
+  grid-template: 100% / 200px 1fr 1fr 1fr;
   justify-items: center;
 }
-.filterBar {
-  width: 100%;
+#root {
+  height: 100%;
+}
+.fullScreenBlog {
+  position: fixed;
+  width: 90vw;
+  max-width: 900px;
+  height: 90vh;
+  background-color: lightgray;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: black 2px solid;
+  box-shadow: 0px 0px 20px 8px rgba(128, 128, 128, 0.685);
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.closeButton {
+  position: sticky;
+  display: flex;
+  top: 5px;
+  float: right;
   background-color: pink;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: black solid 2px;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  padding-top: 12px;
+  cursor: pointer;
+  user-select: none;
+  transition-duration: 0.5s;
+}
+.closeButton:hover {
+  background-color: turquoise;
 }
