--- a/src/Components/videoSearchResults/VideoSearchResults.css
+++ b/src/Components/videoSearchResults/VideoSearchResults.css
@@ -1,31 +1,12 @@
-.videoList {
-  width: 90%;
-  height: 90vh;
-  overflow-y: scroll;
-  margin: 20px;
-  background-color: grey;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 480px);
-  justify-content: space-around;
-  justify-items: center;
-}
-
-
 .videoResult {
-  width: fit-content;
-  background-color: pink;
-  margin: 20px;
-  padding: 20px;
   display: grid;
-  grid-template-rows: 1fr 3fr 1fr;
-}
-
-.videoTitle, .videoDescription {
-  width: 400px;
-  text-align: center;
-  font-size: 20px;
+  grid-template-rows: fit-content 225px fit-content;
+  width: 450px;
+  background-color: pink;
+  padding: 20px;
 }
 
 .videoDescription {
   font-size: 16px;
+  width: 400px;
 }
