--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template: 100% / 200px 1fr 1fr 1fr;
   justify-items: center;
 }
 #root {
@@ -23,24 +22,41 @@
   padding: 10px;
 }
 
-.closeButton {
-  position: sticky;
+.fullPageBlogHeader {
   display: flex;
-  top: 5px;
-  float: right;
+  align-items: center;
+  margin: -10px;
+  margin-bottom: 10px;
   background-color: pink;
-  height: 20px;
-  width: 20px;
+  position: sticky;
+  top: -10px;
+  padding: 10px;
+  border-bottom: black 2px solid;
+}
+
+.fullBlogTitle {
+  width: 100%;
+  text-align: center;
+  padding: 0 70px;
+}
+
+.closeButton {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: fit-content;
+  background-color: turquoise;
   border-radius: 50%;
   border: black solid 2px;
   padding: 10px;
-  justify-content: center;
-  align-items: center;
   padding-top: 12px;
   cursor: pointer;
   user-select: none;
   transition-duration: 0.5s;
+  z-index: 10;
 }
 .closeButton:hover {
-  background-color: turquoise;
+  background-color: grey;
 }
