--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -7,6 +7,20 @@
 #root {
   height: 100%;
 }
+
+.welcome {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 5rem;
+  padding: 15%;
+  background-color: grey;
+}
+
 .fullScreenBlog {
   position: fixed;
   width: 90vw;
