--- a/src/Components/SearchResultsList/SearchResultList.css
+++ b/src/Components/SearchResultsList/SearchResultList.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  justify-content: space-around;
+  justify-content: center;
   justify-items: center;
   overflow-x: hidden;
 }
